Removed some core styles

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -33,10 +33,11 @@
 @import 'components/system-alerts';
 
 // *** Containers
-@import 'containers/github';
-@import 'containers/apps_grid';
+// @import 'containers/github';
+// @import 'containers/apps_grid';
 
 // *** Routes
-@import 'routes/home';
-@import 'routes/private';
-@import 'routes/not-found';
+// @import 'routes/home';
+// @import 'routes/private';
+// @import 'routes/not-found';
+// @import 'routes/login';
