--- a/app/index.ejs
+++ b/app/index.ejs
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <title><%= htmlWebpackPlugin.options.title || 'Webpack App' %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
-  <meta property="og:title" content="React-Redux-Saga Boilerplate" />
+  <meta property="og:title" content="Aplicativos Libres" />
   <meta property="og:url" content="https://aplicativos-libres.herokuapp.com/" />
-  <meta property="og:description" content="Provides: react ^16.x, react-router ^4.x, redux ^3.x, redux-saga ^0.16" />
+  <meta property="og:description" content="Esapcio de Cultura, Información y Tecnología." />
   <meta property="og:image" content="https://aplicativos-libres.herokuapp.com/media/og-image-v1.png" />
   <meta property="og:type" content="website" />
   <link rel="manifest" href="<%- require('assets/manifest.json') %>">
