--- a/app/styles/layout/_app.scss
+++ b/app/styles/layout/_app.scss
@@ -5,7 +5,9 @@
   opacity: 1 !important;
   position: relative;
   transition: opacity 0.5s;
-  color: white;
+  background-color: rgb(205, 205, 231);
+  background-image: url($media-path+ '/images/background_space.png');
+  
   &__main {
     min-height: 100vh;
 
