--- a/app/styles/components/_footer.scss
+++ b/app/styles/components/_footer.scss
@@ -4,6 +4,8 @@
   .app__container {
     padding-bottom: $grid-gutter-width / 2;
     padding-top: $grid-gutter-width / 2;
+    padding-left: 30px;
+    padding-right: 30px;
     background-color: black;
     color: 'rgb(30, 120, 235)'
   }
