Adds styles for the map container

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -35,6 +35,7 @@
 // *** Containers
 // @import 'containers/github';
 // @import 'containers/apps_grid';
+@import 'containers/map';
 
 // *** Routes
 // @import 'routes/home';
